examples/test/testpolicy1632.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1632
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key16: value8
      key36: value28
      key19: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value37
      podSelector:
        matchLabels:
          key37: value40
